--- a/sorry.css
+++ b/sorry.css
@@ -1,6 +1,6 @@
-div {
-  margin: 0 auto;
-  width: 1280px; height: 866px;
+body {
+  /* margin: 0 auto;
+  width: 1280px; height: 866px; */
   background-image: url('./sorry.jpg');
   background-size: cover;
 }
