--- a/css/main.css
+++ b/css/main.css
@@ -1,89 +1,19 @@
 body {
-  background-color: #eef2fb;
+  color: #333;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.4;
 }
-section div.home1 {
-  width: 100%; height: 500px;
-  background: #000f26 url('../img/home1.png') no-repeat center;
+img {
+  display: block;
 }
-section>img {
-  display: block; width: 800px; height: 200px; margin: 60px auto;
+header {
+  background-color: #f6f5f0;
+  border-bottom: 1px solid #c8c8c8;
 }
-/* division line ----------------------------------------------------------- */
-.divline {
-  width: 1100px; margin: 0 auto; overflow: hidden;
-  margin-top: 20px;
-  display: flex;
-  /* height: 500px; background-color: orange; */
-}
-.divline>div>p {
-  width: 750px; padding: 20px; margin-top: 150px;
-  font-family: 'Nanum Gothic', sans-serif;
-  font-size: 22px; text-align: center;
-  line-height: 50px; color: gray;
-}
-.divline>div>p>span {
-  color: firebrick; font-family: 'Nanum Gothic', sans-serif;
-}
-/* line1 ------------------------------------------------------------------- */
-.divline .line11 {
-  width: 550px; height: 380px; margin: 10px; padding: 20px;
-  border-radius: 15px; background-image: url('../img/main_line11.png');
-}
-.divline .line12 {
-  width: 550px; height: 380px; margin: 10px; padding: 20px;
-  border-radius: 15px; background-image: url('../img/main_line12.png');
-}
-/* line2 ------------------------------------------------------------------- */
-.divline .line21 {
-  width: 350px; height: 450px; margin: 10px;
-  border-radius: 15px; background-image: url('../img/main_line21.png');
-}
-.divline .line22 {
-  width: 750px; height: 450px; margin: 10px;
-  border-radius: 15px; background-image: url('../img/main_line22.png');
-}
-/* line3 ------------------------------------------------------------------- */
-.divline .line31 {
-  width: 350px; height: 450px; margin: 10px;
-  border-radius: 15px; background-image: url('../img/main_line31.png');
-}
-.divline .line32 {
-  width: 750px; height: 450px; margin: 10px;
-  border-radius: 15px; background-image: url('../img/main_line32.png');
-}
-/* line4 ------------------------------------------------------------------- */
-.divline .line41 {
-  width: 350px; height: 450px; margin: 10px;
-  border-radius: 15px; background-image: url('../img/main_line41.png');
-}
-.divline .line42 {
-  width: 750px; height: 450px; margin: 10px;
-  border-radius: 15px; background-image: url('../img/main_line42.png');
-}
-/* line5 ------------------------------------------------------------------- */
-.divline .line51 {
-  width: 350px; height: 450px; margin: 10px;
-  border-radius: 15px; background-image: url('../img/main_line51.png');
-}
-.divline .line52 {
-  width: 750px; height: 450px; margin: 10px;
-  border-radius: 15px; background-image: url('../img/main_line52.png');
-}
-/* line6 ------------------------------------------------------------------- */
-.divline .line61 {
-  width: 350px; height: 450px; margin: 10px;
-  border-radius: 15px; background-image: url('../img/main_line61.png');
-}
-.divline .line62 {
-  width: 750px; height: 450px; margin: 10px;
-  border-radius: 15px; background-image: url('../img/main_line62.png');
-}
-/* line7 ------------------------------------------------------------------- */
-.divline .line71 {
-  width: 350px; height: 450px; margin: 10px;
-  border-radius: 15px; background-image: url('../img/main_line71.png');
-}
-.divline .line72 {
-  width: 750px; height: 450px; margin: 10px;
-  border-radius: 15px; background-image: url('../img/main_line72.png');
+header .inner {
+  width: 1000px;
+  height: 120px;
+  margin: 0 auto;
+  background-color: lightgreen;
 }
